<?xml version="1.0"?>
<package format="3">
  <name>pgm_map_creator</name>
  <version>0.0.0</version>
  <description>Create pgm map from Gazebo world file for ROS2 localization</description>

  <maintainer email="haoyang@udacity.com">robond</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
